--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -82,14 +82,14 @@
 <h4 hidden>Memory usage</h4>
 <div id="stack_pct" style="width:800px;height:400px"></div>
 
-<h3>Parameters</h3>
+<h3 id="ParametersHeading" hidden>Parameters</h3>
 <p>
-  <input type="button" id="SaveAllParams" value="Save All Parameters" onclick="save_all_parameters();">
-  <input type="button" id="SaveChangedParams" value="Save Changed Parameters" onclick="save_changed_parameters();">
+  <input type="button" id="SaveAllParams" value="Save All Parameters" onclick="save_all_parameters();" hidden>
+  <input type="button" id="SaveChangedParams" value="Save Changed Parameters" onclick="save_changed_parameters();" hidden>
 
-  <h4>Minimal configuration</h4>
+  <h4 hidden>Minimal configuration</h4>
 
-  <fieldset style="width:600px">
+  <fieldset style="width:600px" hidden>
     <legend>Base</legend>
     <input type="radio" id="param_base_all" name="param_base" onchange="update_minimal_config()" checked>
     <label for="param_base_all">All</label>
@@ -97,7 +97,7 @@
     <label for="param_base_changed">Changed</label><br>
   </fieldset>
 
-  <form id="params">
+  <form id="params" hidden>
     <table>
       <tr>
         <td>
@@ -225,7 +225,7 @@
   </form>
 
   <br>
-  <input type="button" id="SaveMinimalParams" value="Save minimal Parameters" onclick="save_minimal_parameters();">
+  <input type="button" id="SaveMinimalParams" value="Save minimal Parameters" onclick="save_minimal_parameters();" hidden>
 
 </p>
 
