FilterReview: Highlight the primary gyro and only show it by defualt

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -109,7 +109,7 @@
     <tr>
         <td style="width: 50px;"></td>
         <td>
-            <fieldset style="width:300px">
+            <fieldset id="Gyro0" style="width:300px">
                 <legend ondblclick="update_hidden(this)">Gyro 1</legend>
                 Sensor: <label id="Gyro0_info"></label>
                 <p>
@@ -156,7 +156,7 @@
              </fieldset>
         </td>
         <td>
-            <fieldset style="width:300px">
+            <fieldset id="Gyro1" style="width:300px">
                 <legend ondblclick="update_hidden(this)">Gyro 2</legend>
                 Sensor: <label id="Gyro1_info"></label>
                 <p>
@@ -203,7 +203,7 @@
             </fieldset>
         </td>
         <td>
-            <fieldset style="width:300px">
+            <fieldset id="Gyro2" style="width:300px">
                 <legend ondblclick="update_hidden(this)">Gyro 3</legend>
                 Sensor: <label id="Gyro2_info"></label>
                 <p>
