--- a/FilterTool/index.html
+++ b/FilterTool/index.html
@@ -342,6 +342,18 @@ ArduPilot 4.2 filter setup.
 </form>
 
 <script>
+
+  window.onerror = function(msg, url, linenumber) {
+      alert('Sorry, something went wrong.\n\n' + 
+            'Please try a hard reload of this page to clear its cache.\n\n' +
+            'If the error persists open an issue on the GitHub repo.\n' +
+            'Include a copy of the log and the following error message:\n\n' +
+             msg + '\n' +
+            'URL: '+ url +'\n' +
+            'Line Number: '+ linenumber)
+      return true
+  }
+
   var calc_btn = document.getElementById('calculate');
   calc_btn.onclick = function() {
       calculate_filter();
